--- a/docs/third_iteration/过程改进.md
+++ b/docs/third_iteration/过程改进.md
@@ -61,7 +61,7 @@
 
 **用github实现过程度量**
 
-![/home/hq/TISHQ/md/imgs/2019-05-24_002.png](/home/hq/TISHQ/md/imgs/2019-05-24_002.png)
+![/home/hq/TISHQ/md/imgs/2019-05-24_002.png](../imgs/2019-05-24_002.png)
 
 ![/home/hq/TISHQ/md/imgs/2019-05-24_003.png](/home/hq/TISHQ/md/imgs/2019-05-24_003.png)
 
