--- a/docs/third_iteration/过程改进.md
+++ b/docs/third_iteration/过程改进.md
@@ -43,7 +43,7 @@
 
 **说明:为了简化操作,小组建了一个群,把各自的文档代码统一发到群里,最后主要由一个人负责在github上管理**
 
-![/home/hq/TISHQ/md/imgs/2019-05-24_001.png](/home/hq/TISHQ/md/imgs/2019-05-24_001.png)
+![/home/hq/TISHQ/md/imgs/2019-05-24_001.png](..//imgs/2019-05-24_001.png)
 
 
 
@@ -63,10 +63,10 @@
 
 ![/home/hq/TISHQ/md/imgs/2019-05-24_002.png](../imgs/2019-05-24_002.png)
 
-![/home/hq/TISHQ/md/imgs/2019-05-24_003.png](/home/hq/TISHQ/md/imgs/2019-05-24_003.png)
+![/home/hq/TISHQ/md/imgs/2019-05-24_003.png](../imgs/2019-05-24_003.png)
 
 ![/home/hq/TISHQ/md/imgs/2019-05-24_004.png](/home/hq/TISHQ/md/imgs/2019-05-24_004.png)
 
-![/home/hq/TISHQ/md/imgs/2019-05-24_003.png](/home/hq/TISHQ/md/imgs/2019-05-24_005.png)
+![/home/hq/TISHQ/md/imgs/2019-05-24_003.png](../imgs/2019-05-24_005.png)
 
 ### 通关度量发现了哪些问题,进行了哪些改进?
