--- a/docs/third_iteration/过程改进.md
+++ b/docs/third_iteration/过程改进.md
@@ -65,8 +65,9 @@
 
 ![/home/hq/TISHQ/md/imgs/2019-05-24_003.png](../imgs/2019-05-24_003.png)
 
-![/home/hq/TISHQ/md/imgs/2019-05-24_004.png](/home/hq/TISHQ/md/imgs/2019-05-24_004.png)
+![/home/hq/TISHQ/md/imgs/2019-05-24_004.png](../imgs/2019-05-24_004.png)
 
 ![/home/hq/TISHQ/md/imgs/2019-05-24_003.png](../imgs/2019-05-24_005.png)
 
-### 通关度量发现了哪些问题,进行了哪些改进?
+### 4 通关度量发现了哪些问题,进行了哪些改进?
+
