--- a/docs/third_iteration/过程改进.md
+++ b/docs/third_iteration/过程改进.md
@@ -55,6 +55,13 @@
 
 ### 2 在项目实践中对敏捷过程产生的具有感悟？
 
+| 组员   | 感悟                                                         |
+| ------ | :----------------------------------------------------------- |
+| 曾强胜 | 敏捷方法对每一次迭代周期的质量都有严格要求。敏捷开发团队拥有高水平的开发方法，有的会在正式开发功能代码之前先开发该功能的测试代码，质量可保证 |
+| 孟红全 |                                                              |
+| 孙相鹏 |                                                              |
+| 王秀霞 | 敏捷开发使项目快速进入实质开发迭代阶段，用户很快可以看到一个基线架构版的产品，应对需求变化的能力强，即使到了开发后期，也可以相应需求变化，团队成员每隔一段时间进行反省，调整自己的行为，可以更高效的开发项目。 |
+
 
 
 ### 3 在项目实践中采用了什么手段实现过程度量？
