--- a/docs/third_iteration/过程改进.md
+++ b/docs/third_iteration/过程改进.md
@@ -23,7 +23,7 @@
 
 团队文化是指团队成员在相互合作的过程中，为实现各自的人生价值，并为完成团队共同目标而形成的一种潜意识文化。
 
-### 1 团队文化
+### 1 )团队文化
 
 - #### 团队内充满活力
 
@@ -37,9 +37,9 @@
 
   根据大家兴趣,各自负责数据爬去,推荐算法,前段页面,微服务管理,用restfull风格api实现前后端数据交互.
 
-  
+  #### 
 
-### 2 贡献情况
+### 2 )贡献情况
 
 **说明:为了简化操作,小组建了一个群,把各自的文档代码统一发到群里,最后主要由一个人负责在github上管理**
 
@@ -72,9 +72,45 @@
 
 ![/home/hq/TISHQ/md/imgs/2019-05-24_003.png](../imgs/2019-05-24_003.png)
 
+
+
+### 4 通关度量发现了哪些问题,进行了哪些改进?
+
+#### 1)  第一个改进
+
+- **问题**
+
+ 文档太多,目录结构混乱
+
+- **改进**
+
+废除第一次的目录结构,重新规范目录,并增加目录树说明
+
 ![/home/hq/TISHQ/md/imgs/2019-05-24_004.png](../imgs/2019-05-24_004.png)
+
+#### 2)  第二个改进
+
+- **问题**
+
+对代码进行了很大改动,但是发现不想这么改了,想回退一个版本
+
+- **改进**
+
+每次迭代完成,打包发布一个版本
 
 ![/home/hq/TISHQ/md/imgs/2019-05-24_003.png](../imgs/2019-05-24_005.png)
 
-### 4 通关度量发现了哪些问题,进行了哪些改进?
+
+
+#### 3)  第三个改进
+
+- **问题**
+
+组员一开始不太熟悉github,有时虽然写好了文档,但是没有提交
+
+- **改进**
+
+派一个人先熟悉github,然后给大家分享技巧
+
+
 
