--- a/docs/third_iteration/过程改进.md
+++ b/docs/third_iteration/过程改进.md
@@ -17,6 +17,42 @@
 
 ### 3 项目、团队现存的主要风险及应对措施说明；
 
+#### 1) 风险1
+
+- **描述**
+
+数据库访问量太多，在高并发的情况下，系统无法响应。
+
+- **策略**
+
+采用静态化的HTML页面，及时将文章和社区里的帖子实时静态化。
+
+采用数据库集群，将用户信息，文章等数据分开保存。
+
+加入分布式缓存。
+
+
+
+#### 2) 风险2
+
+- **描述**
+
+项目工作量很大，知识储备不足，完成项目的时间可能会推迟。
+
+- **策略**
+
+提前做好迭代计划，列好任务优先级以及每个任务的故事点。将任务划分的更加仔细。保证80%的任务不会出现延迟完结的情况。
+
+#### 3) 风险3
+
+- **描述**
+
+虽然前人已经做过了类似推荐算法，但是不一定适用本项目，本项目的推荐算法由开发人员自行设计，可能会出现推荐准确度不高的情况.
+
+- **策略**
+
+大量阅读其他项目的推荐算法，注意归纳总结，借鉴别人经验.
+
 
 
 ### 4 团队文化的建设与贡献情况说明；
@@ -37,7 +73,6 @@
 
   根据大家兴趣,各自负责数据爬去,推荐算法,前段页面,微服务管理,用restfull风格api实现前后端数据交互.
 
-  #### 
 
 ### 2 )贡献情况
 
@@ -51,14 +86,24 @@
 
 ### 1 在项目实践中应用了哪些RUP的最佳实践？
 
+- **迭代开发**
 
+  分为三次迭代
+
+  ![/home/hq/TISHQ/md/imgs/2019-05-24_002.png](../imgs/2019-05-24_002.png)
+
+  
+
+- **持续集成**
+
+  用restfull风格api交互前后端数据,前后端分离,方便持续集成
 
 ### 2 在项目实践中对敏捷过程产生的具有感悟？
 
 | 组员   | 感悟                                                         |
 | ------ | :----------------------------------------------------------- |
 | 曾强胜 | 敏捷方法对每一次迭代周期的质量都有严格要求。敏捷开发团队拥有高水平的开发方法，有的会在正式开发功能代码之前先开发该功能的测试代码，质量可保证 |
-| 孟红全 |                                                              |
+| 孟红全 | 敏捷方法给了我很多启发,经常沟通交流可以更高效的解决问题.结对编程也可以提高效率,结对编程可以让编程变得更轻松,但是却很高效. |
 | 孙相鹏 |                                                              |
 | 王秀霞 | 敏捷开发使项目快速进入实质开发迭代阶段，用户很快可以看到一个基线架构版的产品，应对需求变化的能力强，即使到了开发后期，也可以相应需求变化，团队成员每隔一段时间进行反省，调整自己的行为，可以更高效的开发项目。 |
 
@@ -67,8 +112,6 @@
 ### 3 在项目实践中采用了什么手段实现过程度量？
 
 **用github实现过程度量**
-
-![/home/hq/TISHQ/md/imgs/2019-05-24_002.png](../imgs/2019-05-24_002.png)
 
 ![/home/hq/TISHQ/md/imgs/2019-05-24_003.png](../imgs/2019-05-24_003.png)
 
@@ -106,11 +149,15 @@
 
 - **问题**
 
-组员一开始不太熟悉github,有时虽然写好了文档,但是没有提交
+组员一开始不太熟悉github,有时虽然写好了文档,但是没有提交.有时还会提交冲突
 
 - **改进**
 
-派一个人先熟悉github,然后给大家分享技巧
+派一个人先熟悉github,整理知识,然后给大家分享技巧
+
+[git 分支协同开发](https://github.com/tishq/junior_project/blob/master/docs/first_iteration/git%20%E5%88%86%E6%94%AF%E5%8D%8F%E5%90%8C%E5%BC%80%E5%8F%91.md)
+
+
 
 
 
