--- a/docs/third_iteration/过程改进.md
+++ b/docs/third_iteration/过程改进.md
@@ -13,7 +13,13 @@
 
 ### 2 团队活动的组织与决策产生的过程说明；
 
+- #### 团队活动的组织
 
+###### 在迭代开始确定本次迭代每个人的工作任务，各自依据制定的接口，数据字典等独立开发，不定时汇报个人的开发成果。
+
+- #### 团队决策
+
+团队中每人负责不同的组件。王秀霞负责Android端的开发，曾强胜负责推荐算法的研究，孟红全负责爬虫以及部分框架的使用，孙相鹏负责服务端基础功能的搭建以及各个组件的整合。遇到需要决策的问题时，首先由两个人进行讨论，如果无法制定出方案，则四个人一起进行讨论，确定方案。对于存在较大分歧的问题，按照从用户角度出发和参照市面成熟软件的原则，产生较为合理的决策。
 
 ### 3 项目、团队现存的主要风险及应对措施说明；
 
@@ -104,7 +110,7 @@
 | ------ | :----------------------------------------------------------- |
 | 曾强胜 | 敏捷方法对每一次迭代周期的质量都有严格要求。敏捷开发团队拥有高水平的开发方法，有的会在正式开发功能代码之前先开发该功能的测试代码，质量可保证 |
 | 孟红全 | 敏捷方法给了我很多启发,经常沟通交流可以更高效的解决问题.结对编程也可以提高效率,结对编程可以让编程变得更轻松,但是却很高效. |
-| 孙相鹏 |                                                              |
+| 孙相鹏 | 敏捷开发将一个大的项目划分为多个相对独立的小项目，提高了容错性，使得软件可维护，可修改。更重要的是，敏捷开发使用户的需求更容易得到实现，拥抱变更的概念使每次需求变更都能及时地反映到软件中。与此同时，敏捷开发也在一定程度上提高了项目管理的难度，对开发人员方法和技术上的要求也更高。如今的微服务架构与敏捷开发可谓是相辅相成。 |
 | 王秀霞 | 敏捷开发使项目快速进入实质开发迭代阶段，用户很快可以看到一个基线架构版的产品，应对需求变化的能力强，即使到了开发后期，也可以相应需求变化，团队成员每隔一段时间进行反省，调整自己的行为，可以更高效的开发项目。 |
 
 
