完善了一部分功能“

--- a/docs/third_iteration/过程改进.md
+++ b/docs/third_iteration/过程改进.md
@@ -84,7 +84,9 @@
 
 **说明:为了简化操作,小组建了一个群,把各自的文档代码统一发到群里,最后主要由一个人负责在github上管理**
 
-![/home/hq/TISHQ/md/imgs/2019-05-24_001.png](..//imgs/2019-05-24_001.png)
+![1558678601173](C:\Users\xiang\AppData\Roaming\Typora\typora-user-images\1558678601173.png)
+
+
 
 
 
